fixed few layout issues

--- a/public/css/src/landing/landing.css
+++ b/public/css/src/landing/landing.css
@@ -173,9 +173,9 @@
     text-align: center;
     position: absolute;
     bottom: 2px;
-    left: -54px;
     right: 0;
     z-index: 10000;
+    width: 100%;
 }
 
 .landing-connexion button {
@@ -324,6 +324,7 @@
    .landing__phone {
      top: 24%;
      width: 42%;
+     max-width: 170px;
    }
 
    .landing-footer {
